src/Services/Services.scss
@import '../SCSS/variables';
@import '../SCSS/media-queries';

.section_services {
    // animation: fade-in 1s ease-out both 0.3s;
    // -webkit-animation: fade-in 1s ease-out both 0.3s;
    // -moz-animation: fade-in 1s ease-out both 0.3s;
    // -o-animation: fade-in 1s ease-out both 0.3s;
}

.services_banner {
    width: 90%;
    height: 70vh;
    margin: 2em auto;
    position: relative;
    border-bottom: 1px solid #000;
    padding-bottom: 1%;
    @include lg {
        height: 60vh;
    }
    @include md {
        height: 50vh;
    } 
    @include sm {
        height: 40vh;
    }   
}

.services_img {
    width: 100%;
    height: 70vh;
    background-size: cover;
    background-attachment: fixed;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    @include lg {
        height: 60vh;
    }
    @include md {
        height: 50vh;
        background-attachment: inherit;
    }  
    @include sm {
        height: 40vh;
        background-attachment: inherit;
    }  
    .services_banner-h2 {
        position: absolute;
        font-size: 4em;
        color: white;
        top: 18%;
        left: 14%;
        text-shadow: 5px 4px 6px #000000b5;
    }
}

.services_description-paragraph {
    color: $main_color;
    font-size: 1.4em;
    line-height: 1.7;
    text-align: center;
    font-weight: 500;
    margin: 0 5%;
    padding-bottom: 2%;
    @include xl {
        font-size: 2.2em;
    }
    @include lg {
        font-size: 1.7em;
    }
    @include md {
        font-size: 1.4em;
    }
    @include sm {
        font-size: 1.2em
    }
    @include xs {
        font-size: 1.2em;
    }
    .services_union-link {
        margin-left: 5px;
        text-decoration: none;
        font-weight: 700;
        color: $accent_color;
        &:hover {
            cursor: pointer;
            color: #0a0a94f2;        
        }
    }
}

.services_body {
    margin-right: auto;
    margin-left: auto;
    padding-left: 15px;
    padding-right: 15px;
}

.services_article {
    margin: 0 auto 5% auto;
    padding-left: 15px;
    padding-right: 15px;
    display: flex;
    @include sm {
        flex-direction: column;
        align-items: center;
    }
}

.responsive_article-style {
    @include sm {
        flex-direction: column-reverse;
    }
}

.services_img-holder-1,
.services_img-holder-2,
.services_img-holder-3,
.services_img-holder-4 {
    float: left;
    @include lg {
        margin-top: 4%;
    }
    @include md {
        margin-top: 7%;
    }

    // animation: fadeIn 1s ease-out both 0.2s;
}

.services_image-1,
.services_image-2,
.services_image-3,
.services_image-4 {
    max-width: 50vw;
    box-shadow: 9px 8px 12px 0px #00000085;
    border-radius: 3px;
    @include lg {
        max-width: 46vw;
    }
    @include md {
        max-width: 44vw;
    }
    @include sm {
        max-width: 62vw;
    }
}

.services_img-holder-1 {
    float: left;
    .services_image-1 {
        float: right;
    }
}

.services_h3 {
    font-size: 1.6em;
    margin-bottom: 1%;
    text-transform: uppercase;
    color: $accent_color;
    letter-spacing: 2px;
    @include lg {
        font-size: 1.6em;
    }
    @include md {
        font-size: 1.5em;
    }
    @include sm {
        font-size: 1.4em;
        margin: 3% 0;
    }
    @include xs {
        font-size: 1.3em;
        margin-top: 2% 0;
    }
}

.services_description-holder-1,
.services_description-holder-2,
.services_description-holder-3,
.services_description-holder-4 {
    padding: 5% 0 0 5%;
    @include lg {
        padding: 4% 0 0 4%; 
    }
    @include md {
        padding: 3% 0 0 3%; 
    }
    @include sm {
        padding: 2% 0 0 2%; 
    }
    @include xs {
        padding: 1% 0 0 1%; 
    }
}

.services_paragraph {
    font-size: 1.4em;
    line-height: 1.4;
    font-weight: 500;
    color: $main_color;
}

@keyframes fadeIn {
    from {opacity: 0%;}
    to {opacity: 100%;}
}

